build/cil/src/formatparse.output
   0  $accept : %entry% $end

   1  initialize :

   2  expression : ARG_e
   3             | constant
   4             | lval
   5             | SIZEOF expression
   6             | SIZEOF LPAREN typename RPAREN
   7             | ALIGNOF expression
   8             | ALIGNOF LPAREN typename RPAREN
   9             | PLUS expression
  10             | MINUS expression
  11             | EXCLAM expression
  12             | TILDE expression
  13             | argu expression
  14             | AND expression
  15             | LPAREN expression RPAREN
  16             | expression PLUS expression
  17             | expression MINUS expression
  18             | expression argb expression
  19             | expression STAR expression
  20             | expression SLASH expression
  21             | expression PERCENT expression
  22             | expression INF_INF expression
  23             | expression SUP_SUP expression
  24             | expression AND expression
  25             | expression PIPE expression
  26             | expression CIRC expression
  27             | expression EQ_EQ expression
  28             | expression EXCLAM_EQ expression
  29             | expression INF expression
  30             | expression SUP expression
  31             | expression INF_EQ expression
  32             | expression SUP_EQ expression
  33             | LPAREN typename RPAREN expression

  34  argu : ARG_u

  35  argb : ARG_b

  36  constant : ARG_d
  37           | ARG_g
  38           | CST_INT

  39  lval : ARG_l
  40       | argv offset
  41       | STAR expression
  42       | expression ARROW IDENT offset
  43       | LPAREN STAR expression RPAREN offset

  44  argv : ARG_v
  45       | IDENT

  46  offset : ARG_o
  47         |
  48         | DOT IDENT offset
  49         | LBRACKET expression RBRACKET offset

  50  typename : one_formal

  51  one_formal : type_spec attributes decl
  52             | ARG_f

  53  type_spec : ARG_t
  54            | VOID
  55            | ARG_k
  56            | CHAR
  57            | UNSIGNED CHAR
  58            | SHORT
  59            | UNSIGNED SHORT
  60            | INT
  61            | UNSIGNED INT
  62            | LONG
  63            | UNSIGNED LONG
  64            | LONG LONG
  65            | UNSIGNED LONG LONG
  66            | FLOAT
  67            | DOUBLE
  68            | STRUCT ARG_c
  69            | UNION ARG_c
  70            | TYPEOF LPAREN expression RPAREN

  71  decl : STAR attributes decl
  72       | direct_decl

  73  direct_decl :
  74              | IDENT
  75              | LPAREN attributes decl RPAREN
  76              | direct_decl LBRACKET exp_opt RBRACKET
  77              | LPAREN attributes decl RPAREN LPAREN parameters RPAREN

  78  parameters :
  79             | parameters_ne

  80  parameters_ne : ELLIPSIS
  81                | ARG_va
  82                | ARG_F
  83                | one_formal
  84                | one_formal COMMA parameters_ne

  85  exp_opt :
  86          | expression
  87          | ARG_eo

  88  attributes :
  89             | ARG_A
  90             | attribute attributes

  91  attribute : CONST
  92            | RESTRICT
  93            | VOLATILE
  94            | ATTRIBUTE LPAREN LPAREN attr RPAREN RPAREN

  95  attr : IDENT
  96       | IDENT LPAREN attr_args_ne RPAREN

  97  attr_args_ne : attr_arg
  98               | attr_arg COMMA attr_args_ne
  99               | ARG_P

 100  attr_arg : IDENT
 101           | IDENT LPAREN attr_args_ne RPAREN
 102           | ARG_p

 103  prepost :
 104          | prepost_ne

 105  prepost_ne : prepost_cond
 106             | prepost_cond prepost_ne

 107  prepost_cond : PRECONDITION LPAREN IDENT RPAREN COLON CST_STRING SEMICOLON
 108               | PRECONDITION COLON CST_STRING SEMICOLON
 109               | POSTCONDITION LPAREN IDENT RPAREN COLON CST_STRING SEMICOLON
 110               | POSTCONDITION COLON CST_STRING SEMICOLON

 111  instr : ASSERT LPAREN IDENT COMMA CST_STRING RPAREN SEMICOLON
 112        | ASSUME LPAREN IDENT COMMA CST_STRING RPAREN SEMICOLON
 113        | ASSERT LPAREN CST_STRING RPAREN SEMICOLON
 114        | ASSUME LPAREN CST_STRING RPAREN SEMICOLON
 115        | ARG_i SEMICOLON
 116        | lval EQ expression SEMICOLON
 117        | lval PLUS_EQ expression SEMICOLON
 118        | lval MINUS_EQ expression SEMICOLON
 119        | lval STAR_EQ expression SEMICOLON
 120        | lval SLASH_EQ expression SEMICOLON
 121        | lval PERCENT_EQ expression SEMICOLON
 122        | lval AND_EQ expression SEMICOLON
 123        | lval PIPE_EQ expression SEMICOLON
 124        | lval CIRC_EQ expression SEMICOLON
 125        | lval INF_INF_EQ expression SEMICOLON
 126        | lval SUP_SUP_EQ expression SEMICOLON
 127        | lval EQ lval LPAREN arguments RPAREN SEMICOLON
 128        | lval LPAREN arguments RPAREN SEMICOLON
 129        | arglo lval LPAREN arguments RPAREN SEMICOLON

 130  arglo : ARG_lo

 131  arguments :
 132            | arguments_ne

 133  arguments_ne : expression
 134               | ARG_E
 135               | expression COMMA arguments_ne

 136  stmt : IF LPAREN expression RPAREN stmt
 137       | IF LPAREN expression RPAREN stmt ELSE stmt
 138       | RETURN exp_opt SEMICOLON
 139       | BREAK SEMICOLON
 140       | CONTINUE SEMICOLON
 141       | LBRACE stmt_list RBRACE
 142       | WHILE LPAREN expression RPAREN stmt
 143       | instr_list
 144       | ARG_s

 145  stmt_list :
 146            | ARG_S
 147            | stmt stmt_list
 148            | type_spec attributes decl maybe_init SEMICOLON stmt_list

 149  instr_list : instr
 150             | ARG_I
 151             | instr instr_list

 152  maybe_init :
 153             | EQ expression
 154             | EQ lval LPAREN arguments RPAREN

 155  %entry% : '\001' initialize
 156          | '\002' expression
 157          | '\003' typename
 158          | '\004' offset
 159          | '\005' lval
 160          | '\006' instr
 161          | '\007' stmt
 162          | '\010' stmt_list
 163          | '\011' prepost

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	'\002'  shift 2
	'\003'  shift 3
	'\004'  shift 4
	'\005'  shift 5
	'\006'  shift 6
	'\007'  shift 7
	'\010'  shift 8
	'\011'  shift 9
	.  error

	%entry%  goto 10


state 1
	%entry% : '\001' . initialize  (155)
	initialize : .  (1)

	.  reduce 1

	initialize  goto 11


state 2
	%entry% : '\002' . expression  (156)

	IDENT  shift 12
	CST_INT  shift 13
	ARG_e  shift 14
	ARG_u  shift 15
	ARG_d  shift 16
	ARG_l  shift 17
	ARG_v  shift 18
	ARG_g  shift 19
	SIZEOF  shift 20
	ALIGNOF  shift 21
	PLUS  shift 22
	MINUS  shift 23
	STAR  shift 24
	TILDE  shift 25
	AND  shift 26
	EXCLAM  shift 27
	LPAREN  shift 28
	.  error

	expression  goto 29
	lval  goto 30
	constant  goto 31
	argu  goto 32
	argv  goto 33


state 3
	%entry% : '\003' . typename  (157)

	CHAR  shift 34
	INT  shift 35
	DOUBLE  shift 36
	FLOAT  shift 37
	VOID  shift 38
	STRUCT  shift 39
	UNION  shift 40
	UNSIGNED  shift 41
	LONG  shift 42
	SHORT  shift 43
	ARG_t  shift 44
	ARG_f  shift 45
	ARG_k  shift 46
	TYPEOF  shift 47
	.  error

	typename  goto 48
	type_spec  goto 49
	one_formal  goto 50


state 4
	%entry% : '\004' . offset  (158)
	offset : .  (47)

	ARG_o  shift 51
	DOT  shift 52
	LBRACKET  shift 53
	$end  reduce 47

	offset  goto 54


state 5
	%entry% : '\005' . lval  (159)

	IDENT  shift 12
	CST_INT  shift 13
	ARG_e  shift 14
	ARG_u  shift 15
	ARG_d  shift 16
	ARG_l  shift 17
	ARG_v  shift 18
	ARG_g  shift 19
	SIZEOF  shift 20
	ALIGNOF  shift 21
	PLUS  shift 22
	MINUS  shift 23
	STAR  shift 24
	TILDE  shift 25
	AND  shift 26
	EXCLAM  shift 27
	LPAREN  shift 28
	.  error

	expression  goto 55
	lval  goto 56
	constant  goto 31
	argu  goto 32
	argv  goto 33


state 6
	%entry% : '\006' . instr  (160)

	IDENT  shift 12
	CST_INT  shift 13
	ARG_e  shift 14
	ARG_u  shift 15
	ARG_d  shift 16
	ARG_lo  shift 57
	ARG_l  shift 17
	ARG_i  shift 58
	ARG_v  shift 18
	ARG_g  shift 19
	SIZEOF  shift 20
	ALIGNOF  shift 21
	PLUS  shift 22
	MINUS  shift 23
	STAR  shift 24
	TILDE  shift 25
	AND  shift 26
	EXCLAM  shift 27
	LPAREN  shift 28
	ASSERT  shift 59
	ASSUME  shift 60
	.  error

	expression  goto 55
	lval  goto 61
	instr  goto 62
	constant  goto 31
	argu  goto 32
	argv  goto 33
	arglo  goto 63


state 7
	%entry% : '\007' . stmt  (161)

	IDENT  shift 12
	CST_INT  shift 13
	ARG_e  shift 14
	ARG_u  shift 15
	ARG_d  shift 16
	ARG_lo  shift 57
	ARG_l  shift 17
	ARG_i  shift 58
	ARG_v  shift 18
	ARG_s  shift 64
	ARG_I  shift 65
	ARG_g  shift 19
	SIZEOF  shift 20
	ALIGNOF  shift 21
	PLUS  shift 22
	MINUS  shift 23
	STAR  shift 24
	TILDE  shift 25
	AND  shift 26
	EXCLAM  shift 27
	LPAREN  shift 28
	LBRACE  shift 66
	BREAK  shift 67
	CONTINUE  shift 68
	RETURN  shift 69
	WHILE  shift 70
	IF  shift 71
	ASSERT  shift 59
	ASSUME  shift 60
	.  error

	expression  goto 55
	lval  goto 61
	instr  goto 72
	stmt  goto 73
	constant  goto 31
	argu  goto 32
	argv  goto 33
	arglo  goto 63
	instr_list  goto 74


state 8
	%entry% : '\010' . stmt_list  (162)
	stmt_list : .  (145)

	IDENT  shift 12
	CST_INT  shift 13
	CHAR  shift 34
	INT  shift 35
	DOUBLE  shift 36
	FLOAT  shift 37
	VOID  shift 38
	STRUCT  shift 39
	UNION  shift 40
	UNSIGNED  shift 41
	LONG  shift 42
	SHORT  shift 43
	ARG_e  shift 14
	ARG_u  shift 15
	ARG_t  shift 44
	ARG_d  shift 16
	ARG_lo  shift 57
	ARG_l  shift 17
	ARG_i  shift 58
	ARG_v  shift 18
	ARG_k  shift 46
	ARG_s  shift 64
	ARG_I  shift 65
	ARG_S  shift 75
	ARG_g  shift 19
	SIZEOF  shift 20
	ALIGNOF  shift 21
	PLUS  shift 22
	MINUS  shift 23
	STAR  shift 24
	TILDE  shift 25
	AND  shift 26
	EXCLAM  shift 27
	LPAREN  shift 28
	LBRACE  shift 66
	BREAK  shift 67
	CONTINUE  shift 68
	RETURN  shift 69
	WHILE  shift 70
	IF  shift 71
	TYPEOF  shift 47
	ASSERT  shift 59
	ASSUME  shift 60
	$end  reduce 145

	expression  goto 55
	lval  goto 61
	instr  goto 72
	stmt  goto 76
	stmt_list  goto 77
	constant  goto 31
	type_spec  goto 78
	argu  goto 32
	argv  goto 33
	arglo  goto 63
	instr_list  goto 74


state 9
	%entry% : '\011' . prepost  (163)
	prepost : .  (103)

	PRECONDITION  shift 79
	POSTCONDITION  shift 80
	$end  reduce 103

	prepost  goto 81
	prepost_ne  goto 82
	prepost_cond  goto 83


state 10
	$accept : %entry% . $end  (0)

	$end  accept


state 11
	%entry% : '\001' initialize .  (155)

	.  reduce 155


state 12
	argv : IDENT .  (45)

	.  reduce 45


state 13
	constant : CST_INT .  (38)

	.  reduce 38


state 14
	expression : ARG_e .  (2)

	.  reduce 2


state 15
	argu : ARG_u .  (34)

	.  reduce 34


state 16
	constant : ARG_d .  (36)

	.  reduce 36


state 17
	lval : ARG_l .  (39)

	.  reduce 39


state 18
	argv : ARG_v .  (44)

	.  reduce 44


state 19
	constant : ARG_g .  (37)

	.  reduce 37


state 20
	expression : SIZEOF . expression  (5)
	expression : SIZEOF . LPAREN typename RPAREN  (6)

	IDENT  shift 12
	CST_INT  shift 13
	ARG_e  shift 14
	ARG_u  shift 15
	ARG_d  shift 16
	ARG_l  shift 17
	ARG_v  shift 18
	ARG_g  shift 19
	SIZEOF  shift 20
	ALIGNOF  shift 21
	PLUS  shift 22
	MINUS  shift 23
	STAR  shift 24
	TILDE  shift 25
	AND  shift 26
	EXCLAM  shift 27
	LPAREN  shift 84
	.  error

	expression  goto 85
	lval  goto 30
	constant  goto 31
	argu  goto 32
	argv  goto 33


state 21
	expression : ALIGNOF . expression  (7)
	expression : ALIGNOF . LPAREN typename RPAREN  (8)

	IDENT  shift 12
	CST_INT  shift 13
	ARG_e  shift 14
	ARG_u  shift 15
	ARG_d  shift 16
	ARG_l  shift 17
	ARG_v  shift 18
	ARG_g  shift 19
	SIZEOF  shift 20
	ALIGNOF  shift 21
	PLUS  shift 22
	MINUS  shift 23
	STAR  shift 24
	TILDE  shift 25
	AND  shift 26
	EXCLAM  shift 27
	LPAREN  shift 86
	.  error

	expression  goto 87
	lval  goto 30
	constant  goto 31
	argu  goto 32
	argv  goto 33


state 22
	expression : PLUS . expression  (9)

	IDENT  shift 12
	CST_INT  shift 13
	ARG_e  shift 14
	ARG_u  shift 15
	ARG_d  shift 16
	ARG_l  shift 17
	ARG_v  shift 18
	ARG_g  shift 19
	SIZEOF  shift 20
	ALIGNOF  shift 21
	PLUS  shift 22
	MINUS  shift 23
	STAR  shift 24
	TILDE  shift 25
	AND  shift 26
	EXCLAM  shift 27
	LPAREN  shift 28
	.  error

	expression  goto 88
	lval  goto 30
	constant  goto 31
	argu  goto 32
	argv  goto 33


state 23
	expression : MINUS . expression  (10)

	IDENT  shift 12
	CST_INT  shift 13
	ARG_e  shift 14
	ARG_u  shift 15
	ARG_d  shift 16
	ARG_l  shift 17
	ARG_v  shift 18
	ARG_g  shift 19
	SIZEOF  shift 20
	ALIGNOF  shift 21
	PLUS  shift 22
	MINUS  shift 23
	STAR  shift 24
	TILDE  shift 25
	AND  shift 26
	EXCLAM  shift 27
	LPAREN  shift 28
	.  error

	expression  goto 89
	lval  goto 30
	constant  goto 31
	argu  goto 32
	argv  goto 33


state 24
	lval : STAR . expression  (41)

	IDENT  shift 12
	CST_INT  shift 13
	ARG_e  shift 14
	ARG_u  shift 15
	ARG_d  shift 16
	ARG_l  shift 17
	ARG_v  shift 18
	ARG_g  shift 19
	SIZEOF  shift 20
	ALIGNOF  shift 21
	PLUS  shift 22
	MINUS  shift 23
	STAR  shift 24
	TILDE  shift 25
	AND  shift 26
	EXCLAM  shift 27
	LPAREN  shift 28
	.  error

	expression  goto 90
	lval  goto 30
	constant  goto 31
	argu  goto 32
	argv  goto 33


state 25
	expression : TILDE . expression  (12)

	IDENT  shift 12
	CST_INT  shift 13
	ARG_e  shift 14
	ARG_u  shift 15
	ARG_d  shift 16
	ARG_l  shift 17
	ARG_v  shift 18
	ARG_g  shift 19
	SIZEOF  shift 20
	ALIGNOF  shift 21
	PLUS  shift 22
	MINUS  shift 23
	STAR  shift 24
	TILDE  shift 25
	AND  shift 26
	EXCLAM  shift 27
	LPAREN  shift 28
	.  error

	expression  goto 91
	lval  goto 30
	constant  goto 31
	argu  goto 32
	argv  goto 33


state 26
	expression : AND . expression  (14)

	IDENT  shift 12
	CST_INT  shift 13
	ARG_e  shift 14
	ARG_u  shift 15
	ARG_d  shift 16
	ARG_l  shift 17
	ARG_v  shift 18
	ARG_g  shift 19
	SIZEOF  shift 20
	ALIGNOF  shift 21
	PLUS  shift 22
	MINUS  shift 23
	STAR  shift 24
	TILDE  shift 25
	AND  shift 26
	EXCLAM  shift 27
	LPAREN  shift 28
	.  error

	expression  goto 92
	lval  goto 30
	constant  goto 31
	argu  goto 32
	argv  goto 33


state 27
	expression : EXCLAM . expression  (11)

	IDENT  shift 12
	CST_INT  shift 13
	ARG_e  shift 14
	ARG_u  shift 15
	ARG_d  shift 16
	ARG_l  shift 17
	ARG_v  shift 18
	ARG_g  shift 19
	SIZEOF  shift 20
	ALIGNOF  shift 21
	PLUS  shift 22
	MINUS  shift 23
	STAR  shift 24
	TILDE  shift 25
	AND  shift 26
	EXCLAM  shift 27
	LPAREN  shift 28
	.  error

	expression  goto 93
	lval  goto 30
	constant  goto 31
	argu  goto 32
	argv  goto 33


state 28
	expression : LPAREN . expression RPAREN  (15)
	expression : LPAREN . typename RPAREN expression  (33)
	lval : LPAREN . STAR expression RPAREN offset  (43)

	IDENT  shift 12
	CST_INT  shift 13
	CHAR  shift 34
	INT  shift 35
	DOUBLE  shift 36
	FLOAT  shift 37
	VOID  shift 38
	STRUCT  shift 39
	UNION  shift 40
	UNSIGNED  shift 41
	LONG  shift 42
	SHORT  shift 43
	ARG_e  shift 14
	ARG_u  shift 15
	ARG_t  shift 44
	ARG_d  shift 16
	ARG_l  shift 17
	ARG_f  shift 45
	ARG_v  shift 18
	ARG_k  shift 46
	ARG_g  shift 19
	SIZEOF  shift 20
	ALIGNOF  shift 21
	PLUS  shift 22
	MINUS  shift 23
	STAR  shift 94
	TILDE  shift 25
	AND  shift 26
	EXCLAM  shift 27
	LPAREN  shift 28
	TYPEOF  shift 47
	.  error

	expression  goto 95
	typename  goto 96
	lval  goto 30
	constant  goto 31
	type_spec  goto 49
	argu  goto 32
	argv  goto 33
	one_formal  goto 50


state 29
	expression : expression . PLUS expression  (16)
	expression : expression . MINUS expression  (17)
	expression : expression . argb expression  (18)
	expression : expression . STAR expression  (19)
	expression : expression . SLASH expression  (20)
	expression : expression . PERCENT expression  (21)
	expression : expression . INF_INF expression  (22)
	expression : expression . SUP_SUP expression  (23)
	expression : expression . AND expression  (24)
	expression : expression . PIPE expression  (25)
	expression : expression . CIRC expression  (26)
	expression : expression . EQ_EQ expression  (27)
	expression : expression . EXCLAM_EQ expression  (28)
	expression : expression . INF expression  (29)
	expression : expression . SUP expression  (30)
	expression : expression . INF_EQ expression  (31)
	expression : expression . SUP_EQ expression  (32)
	lval : expression . ARROW IDENT offset  (42)
	%entry% : '\002' expression .  (156)

	ARG_b  shift 97
	ARROW  shift 98
	EQ_EQ  shift 99
	EXCLAM_EQ  shift 100
	INF  shift 101
	SUP  shift 102
	INF_EQ  shift 103
	SUP_EQ  shift 104
	PLUS  shift 105
	MINUS  shift 106
	STAR  shift 107
	SLASH  shift 108
	PERCENT  shift 109
	AND  shift 110
	PIPE  shift 111
	CIRC  shift 112
	INF_INF  shift 113
	SUP_SUP  shift 114
	$end  reduce 156

	argb  goto 115


state 30
	expression : lval .  (4)

	.  reduce 4


state 31
	expression : constant .  (3)

	.  reduce 3


state 32
	expression : argu . expression  (13)

	IDENT  shift 12
	CST_INT  shift 13
	ARG_e  shift 14
	ARG_u  shift 15
	ARG_d  shift 16
	ARG_l  shift 17
	ARG_v  shift 18
	ARG_g  shift 19
	SIZEOF  shift 20
	ALIGNOF  shift 21
	PLUS  shift 22
	MINUS  shift 23
	STAR  shift 24
	TILDE  shift 25
	AND  shift 26
	EXCLAM  shift 27
	LPAREN  shift 28
	.  error

	expression  goto 116
	lval  goto 30
	constant  goto 31
	argu  goto 32
	argv  goto 33


state 33
	lval : argv . offset  (40)
	offset : .  (47)

	ARG_o  shift 51
	DOT  shift 52
	LBRACKET  shift 53
	$end  reduce 47
	ARG_b  reduce 47
	EQ  reduce 47
	ARROW  reduce 47
	EQ_EQ  reduce 47
	EXCLAM_EQ  reduce 47
	INF  reduce 47
	SUP  reduce 47
	INF_EQ  reduce 47
	SUP_EQ  reduce 47
	MINUS_EQ  reduce 47
	PLUS_EQ  reduce 47
	STAR_EQ  reduce 47
	PLUS  reduce 47
	MINUS  reduce 47
	STAR  reduce 47
	SLASH  reduce 47
	PERCENT  reduce 47
	AND  reduce 47
	PIPE  reduce 47
	CIRC  reduce 47
	INF_INF  reduce 47
	SUP_SUP  reduce 47
	RPAREN  reduce 47
	LPAREN  reduce 47
	RBRACKET  reduce 47
	SEMICOLON  reduce 47
	COMMA  reduce 47
	SLASH_EQ  reduce 47
	PERCENT_EQ  reduce 47
	AND_EQ  reduce 47
	PIPE_EQ  reduce 47
	CIRC_EQ  reduce 47
	INF_INF_EQ  reduce 47
	SUP_SUP_EQ  reduce 47

	offset  goto 117


state 34
	type_spec : CHAR .  (56)

	.  reduce 56


state 35
	type_spec : INT .  (60)

	.  reduce 60


state 36
	type_spec : DOUBLE .  (67)

	.  reduce 67


state 37
	type_spec : FLOAT .  (66)

	.  reduce 66


state 38
	type_spec : VOID .  (54)

	.  reduce 54


state 39
	type_spec : STRUCT . ARG_c  (68)

	ARG_c  shift 118
	.  error


state 40
	type_spec : UNION . ARG_c  (69)

	ARG_c  shift 119
	.  error


state 41
	type_spec : UNSIGNED . CHAR  (57)
	type_spec : UNSIGNED . SHORT  (59)
	type_spec : UNSIGNED . INT  (61)
	type_spec : UNSIGNED . LONG  (63)
	type_spec : UNSIGNED . LONG LONG  (65)

	CHAR  shift 120
	INT  shift 121
	LONG  shift 122
	SHORT  shift 123
	.  error


state 42
	type_spec : LONG .  (62)
	type_spec : LONG . LONG  (64)

	LONG  shift 124
	$end  reduce 62
	IDENT  reduce 62
	VOLATILE  reduce 62
	CONST  reduce 62
	RESTRICT  reduce 62
	ARG_A  reduce 62
	EQ  reduce 62
	STAR  reduce 62
	RPAREN  reduce 62
	LPAREN  reduce 62
	LBRACKET  reduce 62
	SEMICOLON  reduce 62
	COMMA  reduce 62
	ATTRIBUTE  reduce 62


state 43
	type_spec : SHORT .  (58)

	.  reduce 58


state 44
	type_spec : ARG_t .  (53)

	.  reduce 53


state 45
	one_formal : ARG_f .  (52)

	.  reduce 52


state 46
	type_spec : ARG_k .  (55)

	.  reduce 55


state 47
	type_spec : TYPEOF . LPAREN expression RPAREN  (70)

	LPAREN  shift 125
	.  error


state 48
	%entry% : '\003' typename .  (157)

	.  reduce 157


state 49
	one_formal : type_spec . attributes decl  (51)
	attributes : .  (88)

	VOLATILE  shift 126
	CONST  shift 127
	RESTRICT  shift 128
	ARG_A  shift 129
	ATTRIBUTE  shift 130
	$end  reduce 88
	IDENT  reduce 88
	STAR  reduce 88
	RPAREN  reduce 88
	LPAREN  reduce 88
	LBRACKET  reduce 88
	COMMA  reduce 88

	attributes  goto 131
	attribute  goto 132


state 50
	typename : one_formal .  (50)

	.  reduce 50


state 51
	offset : ARG_o .  (46)

	.  reduce 46


state 52
	offset : DOT . IDENT offset  (48)

	IDENT  shift 133
	.  error


state 53
	offset : LBRACKET . expression RBRACKET offset  (49)

	IDENT  shift 12
	CST_INT  shift 13
	ARG_e  shift 14
	ARG_u  shift 15
	ARG_d  shift 16
	ARG_l  shift 17
	ARG_v  shift 18
	ARG_g  shift 19
	SIZEOF  shift 20
	ALIGNOF  shift 21
	PLUS  shift 22
	MINUS  shift 23
	STAR  shift 24
	TILDE  shift 25
	AND  shift 26
	EXCLAM  shift 27
	LPAREN  shift 28
	.  error

	expression  goto 134
	lval  goto 30
	constant  goto 31
	argu  goto 32
	argv  goto 33


state 54
	%entry% : '\004' offset .  (158)

	.  reduce 158


state 55
	expression : expression . PLUS expression  (16)
	expression : expression . MINUS expression  (17)
	expression : expression . argb expression  (18)
	expression : expression . STAR expression  (19)
	expression : expression . SLASH expression  (20)
	expression : expression . PERCENT expression  (21)
	expression : expression . INF_INF expression  (22)
	expression : expression . SUP_SUP expression  (23)
	expression : expression . AND expression  (24)
	expression : expression . PIPE expression  (25)
	expression : expression . CIRC expression  (26)
	expression : expression . EQ_EQ expression  (27)
	expression : expression . EXCLAM_EQ expression  (28)
	expression : expression . INF expression  (29)
	expression : expression . SUP expression  (30)
	expression : expression . INF_EQ expression  (31)
	expression : expression . SUP_EQ expression  (32)
	lval : expression . ARROW IDENT offset  (42)

	ARG_b  shift 97
	ARROW  shift 98
	EQ_EQ  shift 99
	EXCLAM_EQ  shift 100
	INF  shift 101
	SUP  shift 102
	INF_EQ  shift 103
	SUP_EQ  shift 104
	PLUS  shift 105
	MINUS  shift 106
	STAR  shift 107
	SLASH  shift 108
	PERCENT  shift 109
	AND  shift 110
	PIPE  shift 111
	CIRC  shift 112
	INF_INF  shift 113
	SUP_SUP  shift 114
	.  error

	argb  goto 115


state 56
	expression : lval .  (4)
	%entry% : '\005' lval .  (159)

	$end  reduce 159
	ARG_b  reduce 4
	ARROW  reduce 4
	EQ_EQ  reduce 4
	EXCLAM_EQ  reduce 4
	INF  reduce 4
	SUP  reduce 4
	INF_EQ  reduce 4
	SUP_EQ  reduce 4
	PLUS  reduce 4
	MINUS  reduce 4
	STAR  reduce 4
	SLASH  reduce 4
	PERCENT  reduce 4
	AND  reduce 4
	PIPE  reduce 4
	CIRC  reduce 4
	INF_INF  reduce 4
	SUP_SUP  reduce 4


state 57
	arglo : ARG_lo .  (130)

	.  reduce 130


state 58
	instr : ARG_i . SEMICOLON  (115)

	SEMICOLON  shift 135
	.  error


state 59
	instr : ASSERT . LPAREN IDENT COMMA CST_STRING RPAREN SEMICOLON  (111)
	instr : ASSERT . LPAREN CST_STRING RPAREN SEMICOLON  (113)

	LPAREN  shift 136
	.  error


state 60
	instr : ASSUME . LPAREN IDENT COMMA CST_STRING RPAREN SEMICOLON  (112)
	instr : ASSUME . LPAREN CST_STRING RPAREN SEMICOLON  (114)

	LPAREN  shift 137
	.  error


state 61
	expression : lval .  (4)
	instr : lval . EQ expression SEMICOLON  (116)
	instr : lval . PLUS_EQ expression SEMICOLON  (117)
	instr : lval . MINUS_EQ expression SEMICOLON  (118)
	instr : lval . STAR_EQ expression SEMICOLON  (119)
	instr : lval . SLASH_EQ expression SEMICOLON  (120)
	instr : lval . PERCENT_EQ expression SEMICOLON  (121)
	instr : lval . AND_EQ expression SEMICOLON  (122)
	instr : lval . PIPE_EQ expression SEMICOLON  (123)
	instr : lval . CIRC_EQ expression SEMICOLON  (124)
	instr : lval . INF_INF_EQ expression SEMICOLON  (125)
	instr : lval . SUP_SUP_EQ expression SEMICOLON  (126)
	instr : lval . EQ lval LPAREN arguments RPAREN SEMICOLON  (127)
	instr : lval . LPAREN arguments RPAREN SEMICOLON  (128)

	EQ  shift 138
	MINUS_EQ  shift 139
	PLUS_EQ  shift 140
	STAR_EQ  shift 141
	LPAREN  shift 142
	SLASH_EQ  shift 143
	PERCENT_EQ  shift 144
	AND_EQ  shift 145
	PIPE_EQ  shift 146
	CIRC_EQ  shift 147
	INF_INF_EQ  shift 148
	SUP_SUP_EQ  shift 149
	ARG_b  reduce 4
	ARROW  reduce 4
	EQ_EQ  reduce 4
	EXCLAM_EQ  reduce 4
	INF  reduce 4
	SUP  reduce 4
	INF_EQ  reduce 4
	SUP_EQ  reduce 4
	PLUS  reduce 4
	MINUS  reduce 4
	STAR  reduce 4
	SLASH  reduce 4
	PERCENT  reduce 4
	AND  reduce 4
	PIPE  reduce 4
	CIRC  reduce 4
	INF_INF  reduce 4
	SUP_SUP  reduce 4


state 62
	%entry% : '\006' instr .  (160)

	.  reduce 160


state 63
	instr : arglo . lval LPAREN arguments RPAREN SEMICOLON  (129)

	IDENT  shift 12
	CST_INT  shift 13
	ARG_e  shift 14
	ARG_u  shift 15
	ARG_d  shift 16
	ARG_l  shift 17
	ARG_v  shift 18
	ARG_g  shift 19
	SIZEOF  shift 20
	ALIGNOF  shift 21
	PLUS  shift 22
	MINUS  shift 23
	STAR  shift 24
	TILDE  shift 25
	AND  shift 26
	EXCLAM  shift 27
	LPAREN  shift 28
	.  error

	expression  goto 55
	lval  goto 150
	constant  goto 31
	argu  goto 32
	argv  goto 33


state 64
	stmt : ARG_s .  (144)

	.  reduce 144


state 65
	instr_list : ARG_I .  (150)

	.  reduce 150


state 66
	stmt : LBRACE . stmt_list RBRACE  (141)
	stmt_list : .  (145)

	IDENT  shift 12
	CST_INT  shift 13
	CHAR  shift 34
	INT  shift 35
	DOUBLE  shift 36
	FLOAT  shift 37
	VOID  shift 38
	STRUCT  shift 39
	UNION  shift 40
	UNSIGNED  shift 41
	LONG  shift 42
	SHORT  shift 43
	ARG_e  shift 14
	ARG_u  shift 15
	ARG_t  shift 44
	ARG_d  shift 16
	ARG_lo  shift 57
	ARG_l  shift 17
	ARG_i  shift 58
	ARG_v  shift 18
	ARG_k  shift 46
	ARG_s  shift 64
	ARG_I  shift 65
	ARG_S  shift 75
	ARG_g  shift 19
	SIZEOF  shift 20
	ALIGNOF  shift 21
	PLUS  shift 22
	MINUS  shift 23
	STAR  shift 24
	TILDE  shift 25
	AND  shift 26
	EXCLAM  shift 27
	LPAREN  shift 28
	LBRACE  shift 66
	BREAK  shift 67
	CONTINUE  shift 68
	RETURN  shift 69
	WHILE  shift 70
	IF  shift 71
	TYPEOF  shift 47
	ASSERT  shift 59
	ASSUME  shift 60
	RBRACE  reduce 145

	expression  goto 55
	lval  goto 61
	instr  goto 72
	stmt  goto 76
	stmt_list  goto 151
	constant  goto 31
	type_spec  goto 78
	argu  goto 32
	argv  goto 33
	arglo  goto 63
	instr_list  goto 74


state 67
	stmt : BREAK . SEMICOLON  (139)

	SEMICOLON  shift 152
	.  error


state 68
	stmt : CONTINUE . SEMICOLON  (140)

	SEMICOLON  shift 153
	.  error


state 69
	stmt : RETURN . exp_opt SEMICOLON  (138)
	exp_opt : .  (85)

	IDENT  shift 12
	CST_INT  shift 13
	ARG_e  shift 14
	ARG_eo  shift 154
	ARG_u  shift 15
	ARG_d  shift 16
	ARG_l  shift 17
	ARG_v  shift 18
	ARG_g  shift 19
	SIZEOF  shift 20
	ALIGNOF  shift 21
	PLUS  shift 22
	MINUS  shift 23
	STAR  shift 24
	TILDE  shift 25
	AND  shift 26
	EXCLAM  shift 27
	LPAREN  shift 28
	SEMICOLON  reduce 85

	expression  goto 155
	lval  goto 30
	constant  goto 31
	argu  goto 32
	argv  goto 33
	exp_opt  goto 156


state 70
	stmt : WHILE . LPAREN expression RPAREN stmt  (142)

	LPAREN  shift 157
	.  error


state 71
	stmt : IF . LPAREN expression RPAREN stmt  (136)
	stmt : IF . LPAREN expression RPAREN stmt ELSE stmt  (137)

	LPAREN  shift 158
	.  error


72: shift/reduce conflict (shift 59, reduce 149) on ASSERT
72: shift/reduce conflict (shift 60, reduce 149) on ASSUME
state 72
	instr_list : instr .  (149)
	instr_list : instr . instr_list  (151)
